style: text align fix

--- a/src/app/fixture/fixture.component.scss
+++ b/src/app/fixture/fixture.component.scss
@@ -1,13 +1,7 @@
 mat-grid-tile{
-    height: 70px;
-    padding: 0px;
-    margin: 0px;
+    height: 60px;
+    text-align: center;
 }
 mat-grid-list{
-    height: 70px; 
-    display: flex; 
-    padding: 0px;
-    margin: 0px;
-    // align-items: center;
-
+    height: 60px; 
 }
